Add correct file paths to the src and herfs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="canonical" href=""> -->
 
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -150,21 +149,21 @@
 
         <section id="services" class="section">
             <div class="service">
-                <h2>This is a main<span> service you do</span></h2>
+                <h2>Rock Breaking</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue.
                 </p>
                 <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
             <div class="service">
-                <h2>This is THE main<span> service you do</span></h2>
+                <h2>Slab Preps</h2>
                 <p>
                     Notice how this one is bigger and darker, this is your main service you provide.
                 </p>
                 <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
             <div class="service">
-                <h2>This is a main<span> service you do</span></h2>
+                <h2>Trenching</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue .
                 </p>
@@ -206,12 +205,6 @@
                         <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:0400797889">0400797889</a></li>
                         <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="brad.willmington@gmail.com">brad.willmington@gmail.com</a></li>
                     </ul>
-                </div>
-    
-                <div class="buttons">
-                    <a class="button-solid" href="/contact.html" >
-                        Call to action button
-                    </a>
                 </div>
             </div>
         </div>
