--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/contact.css">
-    <link rel="stylesheet" href="/css/dark.css">
-    <link rel="stylesheet" href="/css/dark-root-styles.css">
+    <link rel="stylesheet" href="./css/root.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/dark.css">
+    <link rel="stylesheet" href="./css/dark-root-styles.css">
 
     <title></title>
 </head>
@@ -43,7 +43,7 @@
         <!-- Mobile Nav Strip -->
         <div class="mobile-wrapper">
             <div class="mobile-nav container mobile-nav-container">
-                <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" width="110" height="32">
+                <!-- <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" width="110" height="32"> -->
 
                 <img class="dark" id="mobile-logo" src="/images/logo-white.svg" alt="mobile_company_logo" width="110" height="32">
 
@@ -63,22 +63,22 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="images/logo.svg" alt="compnay logo" height="80">
-                        <img class="dark" aria-hidden="true" decoding="async" src="images/logo-white.svg" alt="compnay logo" height="80">
+                    <a class="nav-logo" href="./index.html">
+                        <img class="light" aria-hidden="true" decoding="async" src="./images/logo.svg" alt="compnay logo" height="80">
+                        <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
-                        <li class="nav-li"><a class="link" href="/index.html">Home</a></li>
-                        <li class="nav-li"><a class="link" href="/about.html">About</a></li>
-                        <li class="nav-li"><a class="link" href="/index.html#services">Services</a></li>
+                        <li class="nav-li"><a class="link" href="./index.html">Home</a></li>
+                        <li class="nav-li"><a class="link" href="./about.html">About</a></li>
+                        <li class="nav-li"><a class="link" href="./index.html#services">Services</a></li>
                         <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html">Testimonials</a></li>
-                        <li class="nav-li"><a id="active-menu" class="link" href="/contact.html">Contact</a></li>
+                        <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li>
+                        <li class="nav-li"><a id="active-menu" class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
-                    <img class="moon" aria-hidden="true" src="/images/moon.svg" alt="" width="24" height="24">
-                    <img class="sun" aria-hidden="true" src="/images/sun.svg" alt="" width="24" height="24">
+                    <img class="moon" aria-hidden="true" src="./images/moon.svg" alt="" width="24" height="24">
+                    <img class="sun" aria-hidden="true" src="./images/sun.svg" alt="" width="24" height="24">
                 </button>
             </div>
         </nav>
@@ -148,11 +148,11 @@
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
-                    <a class="info" href="tel:555-213-9120">(555) 213-9120</a>
+                    <a class="info" href="tel:0400797889">0400797889</a>
                 </div>
                 <div class="info-group">
                     <span class="heading">Email</span>
-                    <a class="info" href="mailto:info@email.com">info@email.com</a>
+                    <a class="info" href="mailto:brad.willmington@gmail.com">brad.willmington@gmail.com</a>
                 </div>
                 <div class="info-group">
                     <span class="heading">Hours</span>
@@ -179,19 +179,19 @@
                 <div class="lists">
                     <ul>
                         <li><h2>Company</h2></li>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/contact.html">Services</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./contact.html">Services</a></li>
                     </ul>
                     <ul>
                         <li><h2>Support</h2></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="/images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
                     </ul>
                 </div>
     
