--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="canonical" href="">
 
     <meta name="description" content="">
@@ -32,18 +31,16 @@
     <link rel="stylesheet" href="./css/dark.css">
     <link rel="stylesheet" href="./css/dark-root-styles.css">
 
-    <title></title>
+    <title>Juiblee Earthworks | Airlie Beach, QLD</title>
 </head>
 <body>
-
-    <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a>
-
+    <!-- <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a> -->
     <header>
 
         <!-- Mobile Nav Strip -->
         <div class="mobile-wrapper">
             <div class="mobile-nav container mobile-nav-container">
-                <!-- <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" width="110" height="32"> -->
+                <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" width="110" height="32">
 
                 <img class="dark" id="mobile-logo" src="/images/logo-white.svg" alt="mobile_company_logo" width="110" height="32">
 
@@ -64,15 +61,12 @@
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
                     <a class="nav-logo" href="./index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="./images/logo.svg" alt="compnay logo" height="80">
-                        <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80">
-                    </a>
+                        <h2>Juiblee Earthworks</h2>
+                     </a>
                     <ul id="on-top" class="navbar-links">
                         <li class="nav-li"><a class="link" href="./index.html">Home</a></li>
                         <li class="nav-li"><a class="link" href="./about.html">About</a></li>
                         <li class="nav-li"><a class="link" href="./index.html#services">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li>
                         <li class="nav-li"><a id="active-menu" class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -88,6 +82,7 @@
     
         <!-- ============================================ -->
         <!--                    Landing                   -->
+
         <!-- ============================================ -->
     
         <section id="int-hero">
@@ -100,7 +95,7 @@
 
         <section id="form">
             <div class="left-section">
-                <span class="topper">Business Name</span>
+                <span class="topper">Juiblee Earthworks</span>
                 <h2>Send a Message</h2>
                 <p>If you have any questions or concerns please feel free to reach out to us.  we respond to every call and email.</p>
                 <form id="contact" name="Contact Form" method="post" data-netlify-recaptcha="true" data-netlify="true">
@@ -144,7 +139,7 @@
             <div class="contact-right">
                 <div class="info-group">
                     <span class="heading">Location</span>
-                    <span class="info">Somewhere, TX</span>
+                    <span class="info">Juiblee Pocket, Airlie Beach, Queensland</span>
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
@@ -153,10 +148,6 @@
                 <div class="info-group">
                     <span class="heading">Email</span>
                     <a class="info" href="mailto:brad.willmington@gmail.com">brad.willmington@gmail.com</a>
-                </div>
-                <div class="info-group">
-                    <span class="heading">Hours</span>
-                    <span class="info last">Mon to Sat: 9am to 7pm</span>
                 </div>
             </div>
         </section>
@@ -189,7 +180,7 @@
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank"></a></li>
                         <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
                         <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
                     </ul>
