--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta name="keywords" content="">
     <meta name="description" content="">
 
     <!--Social Media Display-->
-
      <meta property="og:title" content=""/> 
      <meta property="og:description" content=""/> 
      <meta property="og:type" content="website" /> 
@@ -33,12 +32,7 @@
     <title>Juiblee Earthworks | Airlie Beach, QLD</title>
 </head>
 <body>
-    <style>
-    </style>
-    <!-- <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a> -->
-
     <header>
-
         <!-- Mobile Nav Strip -->
         <div class="mobile-wrapper">
             <div class="mobile-nav container mobile-nav-container">
@@ -64,14 +58,11 @@
                 <div id="side-menu" class=" side-nav">
                     <a class="nav-logo" href="./index.html">
                         <h2>Juiblee Earthworks</h2>
-                        <!-- <img class="light" aria-hidden="true" decoding="async" src="#" alt="Juiblee Earth Works" height="80"> -->
-                        <!-- <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80"> -->
                     </a>
                     <ul id="on-top" class="navbar-links">
                         <li class="nav-li"><a id="active-menu" href="index.html">Home</a></li>
                         <li class="nav-li"><a class="link" href="./about.html">About</a></li>
                         <li class="nav-li"><a class="link" href="index.html#services">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li> -->
                         <li class="nav-li"><a class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -151,32 +142,26 @@
             <div class="service">
                 <h2>Rock Breaking</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue.
-                </p>
-                <a href="./contact.html" class="button-solid">Get in Touch</a>
-            </div>
-            <div class="service">
-                <h2>Slab Preps</h2>
-                <p>
-                    Notice how this one is bigger and darker, this is your main service you provide.
+                Rock breaking tools, also known as hydraulic breakers or excavator hammers, are attachments that are mounted on excavators and used to break up rock and other hard materials. These tools can provide several benefits for excavation and construction projects, including:
                 </p>
                 <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
             <div class="service">
                 <h2>Trenching</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue .
+                Under trenching is the process of digging a trench below the surface of the ground. This is typically done using an excavator, which is a heavy machinery vehicle with a bucket or other attachment that can be used to dig into the ground. There are several reasons why under trenching may be necessary, including: Installing utilities, Foundation preparation, Landscaping
+                </p>
+                <a href="./contact.html" class="button-solid">Get in Touch</a>
+            </div>
+            <div class="service">
+                <h2>Slab Preps</h2>
+                <p>
+                    Under slab concrete preparation refers to the process of preparing the ground beneath a concrete slab for the placement of the slab. This typically involves excavating the area to the desired depth and preparing the ground for the placement of the slab.
                 </p>
                 <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
         </section>
 
-        <!-- ============================================ -->
-        <!--                   About                      -->
-        <!-- ============================================ -->
-
-        
-        
     </main>
 
     <!-- ============================================ -->
@@ -201,7 +186,7 @@
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Juiblee Pocket, Airlie Beach, Queensland</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Juiblee Pocket, Airlie Beach, Queenslad</a></li>
                         <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:0400797889">0400797889</a></li>
                         <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="brad.willmington@gmail.com">brad.willmington@gmail.com</a></li>
                     </ul>
